fix: corrected a bug where tasks would overflow their parent container by adding an overflow-y property to the task-container

--- a/src/components/task_container/task_container.css
+++ b/src/components/task_container/task_container.css
@@ -1,11 +1,13 @@
 .task-container {
   display: flex;
   align-items: stretch;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   width: 100%;
   flex-grow: 1;
   gap: 0.8rem;
+  padding: 0.5rem;
+  overflow-y: auto;
 }
 
 .no-tasks {
